@startuml clases

class Main{
    + void main()
}

class AlfaYBeta{
    + enum Estado
    - boolean iniciado
    - long alfa
    - long beta
    - long inicio
    - boolean sinRestriccion
    + AlfaYBeta(long alfa, long beta)
    + AlfaYBeta()
    + setAlfaYBeta(long alfa, long beta)
    + setInicio(long inicio)
    + long getInicio()
    + long getBeta()
    + long getAlfa()
    + iniciar()
    + Estado verificar()
    + long getTiempoExcedido()
}

class AtencionAgente <<Runnable>>{
    - NumeroDeAgente agente
    - MonitorInterface monitor
    + AtencionAgente(NumeroDeAgente agente, MonitorInterface monitor)
    + void run()
    + String toString()
}

class Cancelacion <<Runnable>>{
    - MonitorInterface monitor
    + Cancelacion(MonitorInterface monitor)
    + void run()
    + String toString()
}

class ConfirmacionYPago <<Runnable>>{
    - MonitorInterface monitor
    + ConfirmacionYPago(MonitorInterface monitor)
    + void run()
    + String toString()
}


class EntradaDeClientes <<Runnable>>{
    - MonitorInterface monitor
    + EntradaDeClientes(MonitorInterface monitor)
    + void run()
    + String toString()
}

class Salida <<Runnable>>{
    - MonitorInterface monitor
    + Salida(MonitorInterface monitor)
    + void run()
}

class Log <<Runnable>>{
    - long tiempo
    - FileWriter file
    - RedDePetri redDePetri
    - PrintWriter pw
    + Log(RedDePetri redDePetri)
    + int contarTransiciones(String cadena, String transicion)
    - void imprimirTransiciones()
    + void run()
    - void comprobarSecuencia()
    - String detectPythonInterpreter()
}

class Monitor <<MonitorInterface>>{
    - Monitor m
    - Semaphore mutex
    - HashMap<Integer,Object> llaves
    - RedDePetri redDePetri
    + Politica politica
    - ArrayList<AlfaYBeta> alfaYBetas
    - String betaErrors
    - Integer politicaAdmite
    - Monitor(RedDePetri redDePetri, Politica politica, ArrayList<AlfaYBeta> alfaYBetas)
    + Monitor getInstance()
    + Monitor getInstance(RedDePetri redDePetri, Politica politica, ArrayList<AlfaYBeta> alfaYBetas)
    - Object getLlave(int transition)
    + String getBetaErrors()
    + boolean fireTransition(int t)
    - boolean politicaPermite(int t)
    - void dormirHilo(int t) throws InterruptedException
    - void disparar(int t)
    - void actualizarAlfaYBeta()
    - void notificarATodos()
    - void despertarHilos()
    - void notificar(int t)
}

interface MonitorInterface{
    {abstract} boolean fireTransition(int transicion)
}

Enum NumeroDeAgente{
    AGENTE1
    AGENTE2
    - int numnumeroDeAgente
    + NumeroDeAgente(int numeroDeAgente)
    + int getnumeroDeAgente()
}

class OurThreadFactory <<ThreadFactory>>{
    - AtomicInteger counterThreads
    - List<String> stats
    + OurThreadFactory()
    + Thread newThread(Runnable r)
    + List<String> getStats()
}

interface Politica{
    {abstract} setPolitica(int numeroDePolitica)
    {abstract} int llamadaApolitica(int i, int j)
}

class PoliticaAgenciaVuelo <<Politica>>{
    POLITICA_1
    POLITICA_2  
    - int codigo
    - String descripcion
    -  int numeroPolitica
    + int getCodigo()
    + String getDescripcion()
    + boolean isCodigoValido(int codigo)
    + PoliticaAgenciaVuelo(int numeroPolitica)
    + void setPolitica(int numeroPolitica)
    + int llamadaApolitica(int i, int j)
    - int politicaPriorizada(int i, int j)
    - int politicaBalanceada(int i, int j)
}

class RedDePetri{
    - int[][] matrizIncidencia
    - int[] marcado
    - String secuencia
    - int simT11
    - int maxClient
    - boolean termino
    + RedDePetri(int[][] matrizIncidencia, int[] marcadoInicial)
    + int[] getMarcado()
    + boolean isTermino()
    + int[][] getMatrizIncidencia()
    + boolean sensibilizado(int t)
    + int[] nuevoMarcado(int t)
    + boolean compartenLugaresDeEntrada(int t1, int t2)
    + List<Integer> getSensibilizadas()
    + boolean dispararTransicion(int t)
    + String getSecuencia()
    - boolean comprobarTermino()
}


' Associations
AtencionAgente --> NumeroDeAgente : agente
AtencionAgente --> MonitorInterface : monitor
Cancelacion --> MonitorInterface : monitor
ConfirmacionYPago --> MonitorInterface : monitor
EntradaDeClientes --> MonitorInterface : monitor
Salida --> MonitorInterface : monitor
Log --> RedDePetri : redDePetri
Monitor --> RedDePetri : redDePetri
Monitor --> Politica : politica
Monitor ..|> MonitorInterface
PoliticaAgenciaVuelo ..|> Politica
Monitor o-- "1" RedDePetri : instancia
Monitor ..> AlfaYBeta : alfaYBetas

' Relaciones del main
Main --> OurThreadFactory : crea
Main --> RedDePetri : redDePetri
Main --> Monitor : obtiene instancia
Main --> AtencionAgente : crea hilos de agentes
Main --> Cancelacion : crea hilo
Main --> ConfirmacionYPago : crea hilo
Main --> EntradaDeClientes : crea hilos
Main --> Salida : crea hilo
Main --> Log : crea hilo

@enduml